# Juni-Parkinsons-Detector

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yaml  .replit  .travis.yml  Dockerfile  Pipfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-linux.txt  requirements-mac.txt  requirements.txt  server.py  tree.py
app/models/: train.py
backend/: rest_api.py
backend/old_website/: server.py
backend/templates/: results.html
model/: Predicting Parkinson.ipynb  train.py  train_simple_nn.py
parkinsons-detection-app/: .firebaserc  package-lock.json  package.json
react-app/: package-lock.json  package.json
src/: server.py
src/model/: Parkinson's Detection ML.ipynb  train_resnet.py
templates/: form.html  index.html
templates/html/: index.html  model_notebook.html  msie.html
website/static/: final-model-resnet-80.pkl
