[tool.poetry]
name = "Juni-Parkinsons-Detector"
version = "0.1.0"
description = ""
authors = ["Gideon Grinberg <grinberg1165@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pandas = "^1.0.4"
numpy = "^1.18.4"
keras = "^2.3.1"
Pillow = "^7.1.2"
scipy = "1.1.0"
gevent = "^20.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
